Fix collapsing group style

--- a/webapps/jsfComponents/styles/eyeline/css/collapsing_group.css
+++ b/webapps/jsfComponents/styles/eyeline/css/collapsing_group.css
@@ -3,7 +3,6 @@
   cursor: pointer;
   padding-left: 15px;
   min-height: 17px;
-  height: 17px;
 }
 
 .eyeline_collapsingGroupHeader0 {
